manifests/adguardhome/adguard-svc-ingressroute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: default
spec:
  selector:
    app: adguard-home
  type: LoadBalancer
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  - name: https
    port: 4443
    targetPort: 4443
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-home
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.adguard.example.com`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: adguard-home
          port: 3000
    - match: Host(`adguard.example.com`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: adguard-home
          port: 3000
  tls:
    secretName: local-example-com-tls
